--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-python==3.11.5
 annotated-types==0.6.0
 anyio==4.3.0
+bcrypt==4.1.2
 click==8.1.7
 colorama==0.4.6
 fastapi==0.110.2
@@ -8,8 +8,10 @@ greenlet==3.0.3
 h11==0.14.0
 idna==3.7
 numpy==1.26.4
+passlib==1.7.4
 pydantic==2.7.0
 pydantic_core==2.18.1
+python-multipart==0.0.9
 sniffio==1.3.1
 SQLAlchemy==2.0.29
 starlette==0.37.2
