--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,12 @@ h11==0.14.0
 idna==3.7
 numpy==1.26.4
 passlib==1.7.4
+psycopg2-binary==2.9.9
 pyasn1==0.6.0
 pycparser==2.22
 pydantic==2.7.0
 pydantic_core==2.18.1
+PyMySQL==1.1.0
 python-jose==3.3.0
 python-multipart==0.0.9
 rsa==4.9
