Updated the buildspec.yml file: added artifact file section

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,4 +15,6 @@ phases:
       - echo Building the Docker image...
       - docker build -t todoapp:latest .
   
-artifacts: {}
+artifacts: 
+  files:
+    - "**/*"
