--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.13.1
 annotated-types==0.6.0
 anyio==4.3.0
 bcrypt==4.1.2
@@ -10,6 +11,8 @@ fastapi==0.110.2
 greenlet==3.0.3
 h11==0.14.0
 idna==3.7
+Mako==1.3.3
+MarkupSafe==2.1.5
 numpy==1.26.4
 passlib==1.7.4
 psycopg2-binary==2.9.9
