--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 #alembic
 
-./alembic/
-env.py
-*.ini
+alembic/
+/alembic.ini
+/alembic/versions/*.py
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
