--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ pydantic==2.7.0
 pydantic_core==2.18.1
 PyMySQL==1.1.0
 pytest==8.1.2
+pytest-asyncio==0.23.6
 python-jose==3.3.0
 python-multipart==0.0.9
 rsa==4.9
